--- a/templates/web/add-on-services.html
+++ b/templates/web/add-on-services.html
@@ -7,24 +7,39 @@
         <section>
             <div class="row ">
                 {% for addon_services in addon_services %}
-                <div class="col-lg-3 col-md-4 col-sm-6 col-6 grid-margin">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="{{addon_services.image.url}}" alt="">
-                            </div>
-                            <div class="head-name">
-                                <h6>{{addon_services.name}}</h6> 
-                             </div>
+                <div class="col-lg-2 col-md-4 col-sm-6 col-6 grid-margin">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="{{addon_services.image.url}}" alt="">
                         </div>
-                        
-                    <div class="d-flex">
-                        <div class="w-50 access-button mr-1">
-                            <a href="{{addon_services.detail_link}}" rel="noopener noreferrer" target="_blank" style="color: #fff;">ACCESS</a>
-                        </div>
-                        <div class="w-50 access-button">
-                            <a href="{{addon_services.detail_link}}" rel="noopener noreferrer" target="_blank" style="color: #fff;">DETAILS</a>
+                        <div class="head-name">
+                            <h6 style="color:#000 ;">{{addon_services.name}}</h6>
                         </div>
                     </div>
+
+                    <div class="d-flex">
+                        <div class="w-50 access-button mr-2">
+                            <a href="{{addon_services.detail_link}}" rel="noopener noreferrer" target="_blank"
+                                style="color: #fff;">ACCESS</a>
+                        </div>
+                        <div class="w-50 access-button">
+                            <a href="{{addon_services.detail_link}}" rel="noopener noreferrer" target="_blank"
+                                style="color: #fff;">DETAILS</a>
+                        </div>
+                    </div>
+                    {% comment %}
+                    <div class='buttons'>
+                        <div class='left-col'>
+                            <a href="{{addon_services.link}}" class="access-software" rel="noopener noreferrer"
+                                target="_blank">ACCESS</a>
+                        </div>
+                        <div class='right-col-software'>
+                            <a herf="{{addon_services.detail_link}}" class="name-software" rel="noopener noreferrer"
+                                target="_blank">Detailss</a>
+                            <!-- <a href="" class="name-software" rel="noopener noreferrer" target="_blank"></a> -->
+                        </div>
+                    </div>
+                    {% endcomment %}
                 </div>
                 {% endfor %}
             </div>
