--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -61,7 +61,7 @@
                             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                                        Expiry Date: {{subscription_validity.valid_upto|date:"M/d/Y"}}
+                                      <h4>  <b>Plan Expiry Date: {{order_validity.valid_upto|date:"M/d/Y"}}</b></h4>
                                     </div>
                                 </div>
                             </div>
