--- a/templates/web/partials/popup.html
+++ b/templates/web/partials/popup.html
@@ -1,7 +1,7 @@
 <style> 
 .pop-up-image{
-    height: 300px;
     margin: 0px auto;
+    width: 100%;
 }
 @media only screen and (min-width:320px) and (max-width:567px) {
    .pop-up-image{
