--- a/templates/web/newly-addedd-services.html
+++ b/templates/web/newly-addedd-services.html
@@ -58,9 +58,6 @@
     </div>
 </div>
 
-
-
-
 <!-- Modal -->
 <div class="modal" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
   aria-hidden="true">
@@ -69,7 +66,7 @@
       <div class="modal-header pb-0">
         <h5 class="modal-title" id="exampleModalLongTitle">Download Poster</h5>
       </div>
-      <div class="modal-body">
+      <div class="modal-body" id="modalBody">
       </div>
       <div class="modal-footer" id="modalFooter">
 
