--- a/templates/web/important-poster-searching.html
+++ b/templates/web/important-poster-searching.html
@@ -40,7 +40,7 @@
   </div>
 </div>
 
-<img src="https://cdn.pixabay.com/photo/2022/01/17/06/52/nature-6944000_960_720.jpg" alt="" class="d-none"
+<img src="https://i.ibb.co/C6sTKd5/Whats-App-Image-2022-11-28-at-10-24-05-PM.jpg" alt="" class="d-none"
   id="footerImage" />
 
 
