Poster download issue

--- a/templates/web/newly-addedd-services.html
+++ b/templates/web/newly-addedd-services.html
@@ -75,7 +75,7 @@
   </div>
 </div>
 
-<img src="https://i.ibb.co/C6sTKd5/Whats-App-Image-2022-11-28-at-10-24-05-PM.jpg" alt="" class="d-none"
+<img src="{{branding_image.image.url}}" alt="" class="d-none"
   id="footerImage" />
 
 
