--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -5,8 +5,9 @@
 <div class="main-panel " id="demo">
     <div class="content-wrapper" id="demo2">
 
-        <div class="container rounded bg-white">
-            <div class="row">
+        <div class="container">
+            <div class="row bg-white rounded p-3">
+
                 <div class="col-md-3 border-right">
                     <div class="d-flex flex-column align-items-center text-center p-3 py-5">
                         {% if request.user.profile_image %}
@@ -18,6 +19,7 @@
                         <span> </span>
                     </div>
                 </div>
+
                 <div class="col-md-6 border-right">
                     <div class="p-3 py-4">
                         <div class="d-flex justify-content-between align-items-center mb-3">
@@ -55,13 +57,14 @@
 
                     </div>
                 </div>
+
                 <div class="col-md-3">
                     <div class="p-3">
                         <div class="row">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                                      <h4>  <b>Plan Expiry Date: {{order_validity.valid_upto|date:"M/d/Y"}}</b></h4>
+                                        <h4> <b>Plan Expiry Date: {{order_validity.valid_upto|date:"M/d/Y"}}</b></h4>
                                     </div>
                                 </div>
                             </div>
@@ -136,11 +139,10 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
 
-            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                <div class="branding_image_uploading ">
+            <div class="row mt-4 bg-white rounded p-3">
+
+                <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                     {% if uploaded_branding_image.is_verified == True %}
                     <h3>Image Verified By Admin</h3>
                     <img src="{{uploaded_branding_image.image.crop.1080x222}}" style="width: 100%;"
@@ -150,32 +152,29 @@
                     <img src="{{uploaded_branding_image.image.crop.1080x222}}" style="width: 100%;"
                         class="responsive-size">
                     {% else %}
-                    <h5 style="text-align: center;color: rgb(77, 3, 3);padding: 40px 0px;">Upload Your Branding Image
+                    <h5 style="color: rgb(77, 3, 3);padding: 40px 0px;">Upload Your Branding Image
                     </h5>
                     {% endif %}
                 </div>
-            </div>
 
 
-            <div class="col-lg-12">
-                <div class="row">
+                <div class="col-lg-12">
                     {% if uploaded_branding_image.image %}
-
-                    <div class="col-lg-2 col-md-3 col-sm-4 col-4 tooltip">
-                        <span class="tooltiptext">To change branding image you need to contact admin.
-                        </span>
-                        <a href="{% url 'web:buy_now_branding_image' %}">
-                            <div class="buynow_button">
-                                Change Image
-                            </div>
-                        </a>
+                    <div class="row">
+                        <div class="col-lg-2 col-md-3 col-sm-4 col-4 tooltip">
+                            <span class="tooltiptext">To change branding image you need to contact admin.
+                            </span>
+                            <a href="{% url 'web:buy_now_branding_image' %}">
+                                <div class="buynow_button">
+                                    Change Image
+                                </div>
+                            </a>
+                        </div>
                     </div>
-
                     {% else %}
                     <form action="" method="POST" enctype="multipart/form-data">
                         <div class="row">
                             {% csrf_token %}
-
                             <div class="col-lg-2 col-md-3 col-sm-4 col-4 tooltip">
                                 <span class="tooltiptext">To download a poster with branding of your organization,
                                     upload an image size of (222 PX * 1080 PX ) <br>
@@ -185,14 +184,9 @@
                                 <label class="label-file">{{branding_image_form.image}} Upload Image</label>
 
                             </div>
-
                             <div class="col-lg-2 col-md-3 col-sm-4 col-4">
                                 <input type="submit" value="Save Uploaded Image" class="save_button">
                             </div>
-
-
-                            {% endif %}
-
                             <div class="col-lg-2 col-md-3 col-sm-4 col-4">
                                 <a href="{% url 'web:buy_now_branding_image' %}">
                                     <div class="buynow_button">
@@ -201,15 +195,17 @@
                                 </a>
                             </div>
                         </div>
-                </div>
+                    </form>
+                    {% endif %}
 
-            </div>
-            </form>
-            <div class="row pt-3">
-                <div class="col-lg-12 col-12">
-                    <span>*To know how to edit the image <a
-                            href="https://upabokthasevanakendram.com/usk-login-brand-image.html" target="_blank"
-                            rel="noopener noreferrer">Click Here</a></span>
+                    <div class="row">
+                        <div class="col-lg-12 col-12">
+                            <span>*To know how to edit the image <a
+                                    href="https://upabokthasevanakendram.com/usk-login-brand-image.html" target="_blank"
+                                    rel="noopener noreferrer">Click Here</a></span>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
