--- a/templates/web/partials/popup.html
+++ b/templates/web/partials/popup.html
@@ -44,6 +44,9 @@
         </div>
     </div>
 </div>
+<img src="{{branding_image.image.url}}" alt="" class="d-nones" id="footerImage" />
+
+
 <script>
     window.onload = function () {
         if (localStorage.getItem("hasCodeRunBefore") === null) {
