--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -73,7 +73,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-12 col-sm-12 col-12">
           <h6 class="pb-2 service-heading">NEWLY ADDED SERVICES</h6>
-          
+
           <div class="container">
             <div class="row">
 
@@ -126,79 +126,10 @@
     </section>
 
     {% include 'web/partials/popup.html' %}
+    {% include 'web/partials/poster.html' %}
   </div>
   <!-- content-wrapper ends -->
 </div>
 
-
-<!-- Modal -->
-<div class="modal" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-  aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header pb-0">
-        <h5 class="modal-title" id="exampleModalLongTitle">Download Poster</h5>
-      </div>
-      <div class="modal-body" id="modalBody">
-      </div>
-      <div class="modal-footer" id="modalFooter">
-
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-
-
-
 {% endblock %}
 
-
-{% block js %}
-<script>
-
-  var buttons = document.querySelectorAll('.generate');
-  var Width = 1080; //> same width to both images
-  var headerImageHeight = 858;
-  var footerImageHeight = 111;
-  var HeightAdjustment = 0;
-  var modalBody = document.getElementById('modalBody');
-  var footerImage = document.getElementById('footerImage');
-  var modalFooter = document.getElementById('modalFooter');
-  
-  function generateImage(elm) {
-    var canvas = document.createElement('canvas');
-    canvas.width = Width;
-    canvas.height = headerImageHeight + footerImageHeight + HeightAdjustment;
-    var ctx = canvas.getContext('2d');
-    var source = elm.getAttribute('data-source');
-    var dataImage = document.querySelector(`img[data-id="${source}"]`)
-    modalBody.appendChild(canvas);
-    ctx.drawImage(dataImage, 0, 0, Width, headerImageHeight);
-    ctx.drawImage(footerImage, 0, 858, Width, footerImageHeight);
-    modalFooter.innerHTML = '';
-       
-    image = canvas.toDataURL("image/png", 1.0).replace("image/png", "image/octet-stream");
-    var link = document.createElement('a');
-    link.setAttribute('href', image);
-    link.setAttribute('download', 'image.png');
-    link.setAttribute('class', 'btn btn-primary d-block');
-    link.innerHTML = 'Download';
-    modalFooter.appendChild(link);
-  }
-
-
-
-  buttons.forEach(function (button) {
-    button.addEventListener('click', function () {
-      $('.modal-body').empty();
-      $('#exampleModalCenter').modal('show');
-      generateImage(this);
-    });
-  });
-
-
-</script>
-{% endblock %}
