--- a/templates/web/important-posters.html
+++ b/templates/web/important-posters.html
@@ -69,7 +69,7 @@
       <div class="modal-header pb-0">
         <h5 class="modal-title" id="exampleModalLongTitle">Download Poster</h5>
       </div>
-      <div class="modal-body">
+      <div class="modal-body" id="modalBody">
       </div>
       <div class="modal-footer" id="modalFooter">
 
@@ -78,7 +78,7 @@
   </div>
 </div>
 
-<img src="https://cdn.pixabay.com/photo/2022/01/17/06/52/nature-6944000_960_720.jpg" alt="" class="d-none"
+<img src="{{branding_image.image.url}}" alt="" class="d-none"
   id="footerImage" />
 
 
