--- a/templates/web/partials/poster.html
+++ b/templates/web/partials/poster.html
@@ -15,17 +15,16 @@
   </div>
 </div>
 
-<img src="{{branding_image.image.url}}" alt="" class="d-nones" id="footerImage" />
 
 <script>
 
     var buttons = document.querySelectorAll('.generate');
     var Width = 1080; //> same width to both images
     var headerImageHeight = 858;
-    var footerImageHeight = 111;
+    var footerImageHeight = 222;
     var HeightAdjustment = 0;
     var modalBody = document.getElementById('modalBody');
-    var footerImage = document.getElementById('footerImage');
+    var footerImage = document.querySelector('.branding_image');
     var modalFooter = document.getElementById('modalFooter');
   
     function generateImage(elm) {
@@ -35,9 +34,10 @@
       var ctx = canvas.getContext('2d');
       var source = elm.getAttribute('data-source');
       var dataImage = document.querySelector(`img[data-id="${source}"]`)
+      var brandingImage = dataImage.nextElementSibling;
       modalBody.appendChild(canvas);
       ctx.drawImage(dataImage, 0, 0, Width, headerImageHeight);
-      ctx.drawImage(footerImage, 0, 858, Width, footerImageHeight);
+      ctx.drawImage(brandingImage, 0, 858, Width, footerImageHeight);
       modalFooter.innerHTML = '';
   
       image = canvas.toDataURL("image/png", 1.0).replace("image/png", "image/octet-stream");
@@ -56,6 +56,4 @@
         generateImage(this);
       });
     });
-  
-  
   </script>
