--- a/templates/web/common-service-poster-searching.html
+++ b/templates/web/common-service-poster-searching.html
@@ -8,6 +8,7 @@
   <div class="col-lg-3 col-md-4 col-sm-6 col-6">
     <div class="card card-body w-100">
       <img src="{{common_services.image.url}}" data-id="{{common_services.id | apnumber }}" alt="Image">
+      <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
 
       <div class="text-center mt-3">
         <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
@@ -20,4 +21,5 @@
   {% endfor %}
 </div>
 
+{% include 'web/partials/poster.html' %}
 {% endblock %}
