--- a/templates/web/newly-addedd-services.html
+++ b/templates/web/newly-addedd-services.html
@@ -29,6 +29,7 @@
             <div class="col-lg-3 col-md-4 col-sm-6 col-6">
               <div class="card card-body w-100">
                 <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+                <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
                 <p class="my-1">{{obj.title}}</p>
                 <div class="text-center">
                   <button class="btn-sm btn btn-primary generate" target="_blank"
@@ -57,4 +58,7 @@
       </section>
     </div>
 </div>
+
+{% include 'web/partials/poster.html' %}
+
 {% endblock %}
