--- a/templates/web/professional-poster-searching.html
+++ b/templates/web/professional-poster-searching.html
@@ -9,6 +9,7 @@
   <div class="col-lg-3 col-md-4 col-sm-6 col-6">
     <div class="card card-body w-100">
       <img src="{{prof_posters.image.url}}" data-id="{{prof_posters.id | apnumber }}" alt="Image">
+      <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
 
       <div class="text-center mt-3">
         <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
@@ -20,4 +21,7 @@
   </div>
   {% endfor %}
 </div>
+
+{% include 'web/partials/poster.html' %}
+
 {% endblock %}
