--- a/templates/web/service-searching.html
+++ b/templates/web/service-searching.html
@@ -23,6 +23,7 @@
         <div class="col-lg-3 col-md-4 col-sm-6 col-6">
           <div class="card card-body w-100">
             <img src="{{posters.image.url}}" data-id="{{posters.id | apnumber }}" alt="Image">
+            <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
     
             <div class="text-center mt-3">
               <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
@@ -53,6 +54,9 @@
      
     </div>  
 
+
   </div>
 
+
+  {% include 'web/partials/poster.html' %}
  
