--- a/templates/web/certificate-pdf.html
+++ b/templates/web/certificate-pdf.html
@@ -2653,22 +2653,21 @@ zVdnAAAAAElFTkSuQmCC" transform="matrix(0.2318 0 0 0.2318 106.8327 42.24)">
 		</g>
 		<g id="Usk_I_x27_d_:_USK5020">
 			<text transform="matrix(1 -4.251780e-04 4.251780e-04 1 680.8636 224.7151)" class="st1 st2 st4">Usk I&apos;d
-				:
-				USK</text>
-			<text transform="matrix(1 -4.251780e-04 4.251780e-04 1 762.5336 224.6804)" class="st1 st2 st4">5020</text>
+				:</text>
+			<text transform="matrix(1 -4.251780e-04 4.251780e-04 1 762.5336 224.6804)" class="st1 st2 st4">{{id}}</text>
 		</g>
 		<g id="Joined_Date_:_16_x2F_11_x2F_2022">
 			<text transform="matrix(1 0 0 1 50.8609 224.9296)" class="st1 st2 st4">Joined Date : </text>
-			<text transform="matrix(1 0 0 1 147.0109 224.9296)" class="st1 st2 st4">16/11/2022</text>
+			<text transform="matrix(1 0 0 1 147.0109 224.9296)" class="st1 st2 st4">{{created}}</text>
 		</g>
 		<g
 			id="Shop_Name_:_Lorem_Ipsum_District_:_Lorem_Ipsum_Pincode_:_Lorem_00000005961003325712108250000009818208014966988720_">
 			<text transform="matrix(1 0 0 1 51.6211 475.9691)" class="st1 st2 st5">Shop Name : </text>
-			<text transform="matrix(1 0 0 1 142.3111 475.9691)" class="st1 st2 st4">Lorem Ipsum</text>
+			<text transform="matrix(1 0 0 1 142.3111 475.9691)" class="st1 st2 st4">{{shop_name}}</text>
 			<text transform="matrix(1 0 0 1 84.4811 499.9691)" class="st1 st2 st5">District : </text>
-			<text transform="matrix(1 0 0 1 142.3111 499.9691)" class="st1 st2 st4">Lorem Ipsum</text>
+			<text transform="matrix(1 0 0 1 142.3111 499.9691)" class="st1 st2 st4">{{district}}</text>
 			<text transform="matrix(1 0 0 1 76.6811 523.9691)" class="st1 st2 st5">Pincode : </text>
-			<text transform="matrix(1 0 0 1 142.3111 523.9691)" class="st1 st2 st4">Lorem Ipsum</text>
+			<text transform="matrix(1 0 0 1 142.3111 523.9691)" class="st1 st2 st4">{{pincode}}</text>
 		</g>
 		<g id="The_Certificate_is_Presented_to_:-_00000056420941566171955380000016832028685179716773_">
 			<text id="The_Certificate_is_Presented_to_:-" transform="matrix(1 0 0 1 268.7813 299.81)"
