--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -24,8 +24,8 @@
     window.OneSignal = window.OneSignal || [];
     OneSignal.push(function () {
       OneSignal.init({
-        appId: "3d531d32-fe15-4b93-80b3-0746517b0021",
-        safari_web_id: "web.onesignal.auto.009a4322-838f-4341-bf26-c81fd75aa063",
+        appId: "{{ONESIGNAL_APP_ID}}",
+        safari_web_id: "{{ONESIGNAL_SAFARI_WEB_ID}}",
         notifyButton: {
           enable: true,
         },
