--- a/templates/registration/registration_base.html
+++ b/templates/registration/registration_base.html
@@ -24,7 +24,7 @@
             <div class="text-center mb-4">
                 <img src="{% static 'web/images/USKLKOG.png' %}" style="width:24%;" class="usk-login-register" alt="">
             </div>
-            <div class="col-md-6 mx-auto">
+            <div class="col-lg-4 col-md-6 mx-auto">
                 <div class="wrapper my-0">
                     <div class="form-right">
                         {% block content %}
