--- a/templates/web/payment.html
+++ b/templates/web/payment.html
@@ -14,7 +14,7 @@
 
         <script>
             var options = {
-                "key": "{{razorpay_key}}",
+                "key": "{{RAZOR_PAY_KEY}}",
                 "amount": "{{amount}}",
                 "currency": "INR",
                 "order_id": "{{order.provider_order_id}}",
