--- a/templates/registration/registration_base.html
+++ b/templates/registration/registration_base.html
@@ -21,10 +21,12 @@
     <div class="container py-5">
 
         <div class="row">
-            <div class="text-center mb-4">
-                <img src="{% static 'web/images/USKLKOG.png' %}" style="width:24%;" class="usk-login-register" alt="">
+            <div class="col-lg-4 col-md-6 mx-auto text-center mb-4 ">
+                <img src="{% static 'web/images/USKLKOG.png' %}" style="width:200px;" class="usk-login-register" alt="">
             </div>
-            <div class="col-lg-4 col-md-6 mx-auto">
+        </div>
+        <div class="row">
+            <div class="col-xl-5 col-lg-5 col-md-6 mx-auto">
                 <div class="wrapper my-0">
                     <div class="form-right">
                         {% block content %}
