--- a/templates/web/register.html
+++ b/templates/web/register.html
@@ -12,7 +12,7 @@
     <div class="mb-4">
         <label for="termsCheck" class="form-check-label d-flex align-items-center">
             <input type="checkbox" name="terms" id="termsCheck" required class="me-2">
-            I agree to the <a href="{% url 'web:termsConditions' %}" target="_blank">Terms and Conditions</a>
+            I agree to the <a href="{% url 'web:terms_and_conditions' %}" target="_blank">Terms and Conditions</a>
     </div>
 
     <div class="form-field text-center">
