--- a/templates/registration/registration_base.html
+++ b/templates/registration/registration_base.html
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col-xl-5 col-lg-5 col-md-6 mx-auto">
                 <div class="wrapper my-0">
-                    <div class="form-right">
+                    <div class="form-right text-left">
                         {% block content %}
 
                         {% endblock content %}
