--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -5,21 +5,36 @@
 
 {% block content %}
 <form method="post" action="">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <input type="submit" value="{% trans 'Submit' %}" />
+    <h2 class="text-uppercase text-center">USK Agent Registration</h2>
+
+    <div class="row text-left">
+        {% csrf_token %}
+        {{form|crispy}}
+    </div>
+
+    <div class="mb-4">
+        <label for="termsCheck" class="form-check-label d-flex align-items-center">
+            <input type="checkbox" name="terms" id="termsCheck" required class="me-2">
+            I agree to the <a href="{% url 'web:terms_and_conditions' %}" target="_blank">Terms and Conditions</a>
+    </div>
+
+    <div class="form-field text-center">
+        <button type="submit" id="submitBtn" class="btn btn-primary" name="register" disabled>Submit</button>
+    </div>
+
+    <p class="mt-2"><a href="{% url 'auth_login' %}">Already have an account? Login</a></p>
 </form>
 {% endblock %}
 
-
-{% comment %}
-**registration/registration_form.html**
-Used to show the form users will fill out to register. By default, has
-the following context:
-
-``form``
-    The registration form. This will be an instance of some subclass
-    of ``django.forms.Form``; consult `Django's forms documentation
-    <http://docs.djangoproject.com/en/dev/topics/forms/>`_ for
-    information on how to display this in a template.
-{% endcomment %}
+{% block js %}
+<script>
+    // if termsCheck is checked, enable submitBtn else disable submitBtn
+    $('#termsCheck').change(function () {
+        if ($(this).is(':checked')) {
+            $('#submitBtn').prop("disabled", false);
+        } else {
+            $('#submitBtn').prop("disabled", true);
+        }
+    });
+</script>
+{% endblock %}
