--- a/templates/web/callback.html
+++ b/templates/web/callback.html
@@ -13,7 +13,7 @@
   <div class="success-content">
     <h4>Congratulations, your account has been successfully Upgraded.</h4>
   </div>
-  <a href="{% url 'auth_login' %}" id="contBtn">Continue</a>
+  <a href="{% url 'web:index' %}" id="contBtn">Continue</a>
 </div>
 
 {% endblock %}
