--- a/templates/invoice/general_3.html
+++ b/templates/invoice/general_3.html
@@ -88,7 +88,7 @@
                                             <td class="tm_width_3">{{item.password}}</td>
                                             <td class="tm_width_2">&#8377;{{item.services_charge}}</td>
                                             <td class="tm_width_1">{{item.qty}}</td>
-                                            <td class="tm_width_2 tm_text_right">${{item.sub_total}}</td>
+                                            <td class="tm_width_2 tm_text_right">&#8377;{{item.sub_total}}</td>
                                         </tr>
 
                                         {% endfor %}
