--- a/templates/web/agency-portal.html
+++ b/templates/web/agency-portal.html
@@ -13,6 +13,7 @@
                             <img src="{{portals.image.crop.194x194}}" alt="">
                         </div>
                         <div class="head-name">
+                            <h5 style="color:#000 ;">{{portals.title}}</h5>
                             <h6 style="color:#000 ;">{{portals.name}}</h6>
                         </div>
                     </div>
