--- a/templates/web/back-office-services.html
+++ b/templates/web/back-office-services.html
@@ -13,6 +13,7 @@
                             <img src="{{services.image.crop.194x194}}" alt="">
                         </div>
                         <div class="head-name">
+                            <h5 style="color:#000 ;">{{services.title}}</h5>
                             <h6 style="color:#000 ;">{{services.name}}</h6>
                         </div>
                     </div>
