--- a/templates/web/generate-poster.html
+++ b/templates/web/generate-poster.html
@@ -88,7 +88,7 @@
       <div class="col-12">
         <h5 class="service-heading">Common Services</h5>
       </div>
-      {% for obj in obj_poster %}
+      {% for obj in common_services_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
           <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
