--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -107,7 +107,7 @@
               </div>
               {% endfor %}
               <div class="col-lg-12 col-12 mt-3">
-                <a href="{% url 'web:add_on_services' %}" class="poster-view-more d-inline-block">
+                <a href="{% url 'web:important_services' %}" class="poster-view-more d-inline-block">
                   View More
                 </a>
               </div>
