--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -64,7 +64,7 @@
                             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                                        <h4> <b>Plan Expiry Date: {{order_validity.valid_upto|date:"M/d/Y"}}</b></h4>
+                                        <h6> <b>Plan Expiry Date: {{subscription_validity.valid_upto|date:"M/d/Y"}}</b></h6>
                                     </div>
                                 </div>
                             </div>
