--- a/templates/web/softwares.html
+++ b/templates/web/softwares.html
@@ -13,6 +13,7 @@
                             <img src="{{each_software.image.url}}" alt="">
                         </div>
                         <div class="head-name">
+                            <h5 style="color:#000 ;">{{each_software.title}}</h5>
                             <h6 style="color:#000 ;">{{each_software.name}}</h6>
                         </div>
                     </div>
