--- a/templates/web/support.html
+++ b/templates/web/support.html
@@ -54,7 +54,7 @@
 
                 <div class="col-lg-2 col-md-2 col-sm-6 col-6">
                     <div class="cards">
-                        <a href="{% url 'web:support_ticket' %}">
+                        <a href="https://t.me/+KCzpn1kP3HMxMTY1">
                             <div class="cards-content">
                                 <span>TELEGRAM</span>
                             </div>
@@ -64,7 +64,7 @@
 
                 <div class="col-lg-2 col-md-2 col-sm-6 col-6">
                     <div class="cards">
-                        <a href="{% url 'web:support_ticket' %}">
+                        <a href="https://www.facebook.com/groups/upabokthasevanakendram/">
                             <div class="cards-content">
                                 <span>FACEBOOK</span>
                             </div>
@@ -74,7 +74,7 @@
 
                 <div class="col-lg-2 col-md-2 col-sm-6 col-6">
                     <div class="cards">
-                        <a href="{% url 'web:support_ticket' %}">
+                        <a href="">
                             <div class="cards-content">
                                 <span>GUIDELINE</span>
                             </div>
