--- a/templates/web/tools.html
+++ b/templates/web/tools.html
@@ -13,6 +13,7 @@
                             <img src="{{each_tools.image.url}}" alt="">
                         </div>
                         <div class="head-name">
+                            <h5 style="color:#000 ;">{{each_tools.title}}</h5>
                             <h6 style="color:#000 ;">{{each_tools.name}}</h6>
                         </div>
                     </div>
