--- a/templates/invoice/customer_list.html
+++ b/templates/invoice/customer_list.html
@@ -6,12 +6,12 @@
 {% endblock %}
 
 {% block js %}
-<script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.13.1/datatables.min.js"></script>
+<!-- <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.13.1/datatables.min.js"></script>
 <script>
     $(document).ready(function () {
         $('#example').DataTable();
     });
-</script>
+</script> -->
 {% endblock %}
 
 
