--- a/templates/web/bonus.html
+++ b/templates/web/bonus.html
@@ -14,6 +14,7 @@
                             <img src="{{bonus_for_usk_agent.image.url}}" alt="">
                         </div>
                         <div class="head-name">
+                            <h5 style="color:#000 ;">{{bonus_for_usk_agent.title}}</h5>
                             <h6 style="color:#000 ;">{{bonus_for_usk_agent.name}}</h6>
                         </div>
                     </div>
