--- a/templates/web/marketing-tip.html
+++ b/templates/web/marketing-tip.html
@@ -13,6 +13,7 @@
                                 <img src="{{tips.image.url}}" alt="">
                             </div>
                             <div class="head-name">
+                                <h5 style="color:#000 ;">{{tips.title}}</h5> 
                                 <h6 style="color:#000 ;">{{tips.name}}</h6> 
                              </div>
                         </div>
