--- a/templates/web/other-ideas.html
+++ b/templates/web/other-ideas.html
@@ -14,6 +14,7 @@
                             <img src="{{ideas.image.url}}" alt="">
                         </div>
                         <div class="head-name">
+                            <h5 style="color:#000 ;">{{ideas.title}}</h5>
                             <h6 style="color:#000 ;">{{ideas.name}}</h6>
                         </div>
                     </div>
