--- a/templates/web/upgrade-request.html
+++ b/templates/web/upgrade-request.html
@@ -87,7 +87,7 @@
     }
 
     .item.color {
-        background: #3dcbab;
+        background: #0a5d4a;
         color: #fff;
         transform: scale(1.1);
     }
@@ -114,7 +114,7 @@
     }
 
     .item header h3 {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
     .item header p {
@@ -160,14 +160,14 @@
     }
 
     .item a {
-        padding: 14px 20px;
+        padding: 7px 36px;
         width: 100%;
-        background: rgb(61, 203, 171);
+        background: rgb(26 137 112);
         border: 3px solid transparent;
         border-radius: 20px;
         color: #fff;
         font-weight: bold;
-        font-size: 1.1rem;
+        font-size: 0.9rem;
         box-shadow: 0px 10px 25px 0px rgba(61, 203, 171, .35);
         cursor: pointer;
         transition: all .25s ease;
@@ -196,34 +196,33 @@
 
             <div class="con-items ">
 
-                <div class="item color item2">
+                <div class="item color item2 my-5">
 
                     <header>
-                        <h3>Upgrade Your Plan</h3>
+                        <h3>Premium Support Plan</h3>
                         <p>
-                            <b>
-                                24 &#8377; / user
-                            </b>
+                            <b>&#8377;500/ per month </b>
                         </p>
                     </header>
                     <ul>
                         <li>
-                            <i class='bx bx-check'></i>
-                            All features in <b>Basic</b>
+                            <p style="text-align: center;color: #fff;">സേവനങ്ങൾ സംബന്ധിച്ചു വരുന്ന സംശയങ്ങൾ വിളിച്ചു കൊണ്ടും പേഴ്സണൽ ആയി whatsapp മെസ്സേജ് അയച്ചുകൊണ്ടും തീർക്കുന്നതിന് പ്രതിമാസം അധിക തുക നൽകേണ്ടതുണ്ട്</p>
                         </li>
-                        <li>
-                            <i class='bx bx-check'></i>
-                            Flexible <b>call scheduling</b>
-                        </li>
-                        <li>
-                            <i class='bx bx-check'></i>
-                            <b>15 TB</b> cloud storage
-                        </li>
+                       
                     </ul>
                     <!-- <button class="border" >
                         Choose Plan 
                     </button> -->
-                    <a href="{% url 'web:upgrade_plan' %}" class="border" style="text-align: center;">Upgrade</a>
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                            <a href="{% url 'web:upgrade_plan' %}" class="border" style="text-align: center;">Upgrade</a>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                            <a href="https://upabokthasevanakendram.com/usklogin-premium-support" class="border" style="text-align: center;">Detail</a>
+                        </div>
+                    </div>
+                    
+                    
                 </div>
 
             </div>
